# heats

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Info.plist  README.md  config.dev.toml  config.example.toml  mise.toml  prek.toml
.github/workflows/: build.yml  ci.yml  release.yml
configs/: default.toml  dev.toml
crates/heats-client/: Cargo.toml
crates/heats-client/src/: lib.rs  main.rs
crates/heats-core/: Cargo.toml
crates/heats-core/src/: config.rs  lib.rs
crates/heats-core/src/ipc/: client.rs  mod.rs
crates/heats-core/src/platform/: macos.rs
crates/heats-core/src/source/: applications.rs  mod.rs  windows.rs
crates/heats-daemon/: Cargo.toml
crates/heats-daemon/src/: app.rs  command.rs  evaluator.rs  hotkey.rs  icon.rs  ipc_server.rs  main.rs
crates/heats-daemon/src/matcher/: engine.rs
crates/heats-daemon/src/ui/: mod.rs  result_list.rs  search_input.rs  tab_bar.rs  theme.rs
crates/heats-providers/: Cargo.toml
src/: app.rs  command.rs  config.rs  hotkey.rs  icon.rs  lib.rs  main.rs
src/ipc/: client.rs  mod.rs  server.rs
src/matcher/: engine.rs
src/platform/: macos.rs
src/source/: applications.rs  mod.rs  windows.rs
src/ui/: result_list.rs  theme.rs
