[package]
name = "heats"
version = "0.1.0"
edition = "2021"
description = "A rofi-like extensible fuzzy launcher for macOS"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
nucleo = "0.5"
global-hotkey = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
core-graphics = "0.24"
core-foundation = "0.10"
objc = "0.2"
