[package]
name = "heats"
version = "0.1.0"
edition = "2021"
description = "A rofi-like extensible fuzzy launcher for macOS"
authors = ["td72"]
license = "MIT"
repository = "https://github.com/td72/heats"
readme = "README.md"
keywords = ["launcher", "fuzzy", "macos", "iced", "rofi"]
categories = ["gui"]
exclude = [".github/"]

[[bin]]
name = "heatsd"
path = "src/bin/heatsd.rs"

[[bin]]
name = "heats"
path = "src/bin/heats.rs"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
nucleo = "0.5"
global-hotkey = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
core-graphics = "0.24"
core-foundation = "0.10"
objc = "0.2"
libc = "0.2"
ctrlc = "3"

[profile.release]
strip = true
lto = true
