[package]
name = "heats-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "heatsd"
path = "src/main.rs"

[dependencies]
heats-core = { path = "../heats-core" }
iced = { version = "0.14", features = ["tokio", "image"] }
nucleo = "0.5"
global-hotkey = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3"
icns = "0.4"
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
libc = "0.2"
